# agent_builder_class5_hw2_jaikishen

./: .env.example  .gitignore  README.md  SCHEMA.md  build_pdf.py  main.py  pyproject.toml  settings.py  skynova_handbook.md  spec.md  test_connections.py
backend/: 001_pgvector.sql  agent.py  app.py  db.py  schemas.py
backend/tools/: handbook_search.py  mongo_query.py  sql_query.py
data/: MONGODB_SETUP.md  SUPABASE_SETUP.md  ingest.py  load_mongodb.py  mongodb_seed.json  supabase_seed.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: chat.test.ts  chat.ts
frontend/src/components/: AnswerDisplay.test.tsx  AnswerDisplay.tsx  ChatInput.test.tsx  ChatInput.tsx  EmptyState.test.tsx  EmptyState.tsx  ErrorBanner.test.tsx  ErrorBanner.tsx  HealthFooter.test.tsx  HealthFooter.tsx  Hero.tsx  LoadingSpinner.test.tsx  LoadingSpinner.tsx  Logo.tsx  Sidebar.tsx  ToolCallTrace.test.tsx  ToolCallTrace.tsx  TurnView.tsx
frontend/src/hooks/: useChat.test.tsx  useChat.ts
frontend/src/test/: server.ts
frontend/src/types/: api.ts
tests/integration/: test_chat_endpoint.py  test_handbook_search_integration.py  test_mongo_query_integration.py  test_sql_query_integration.py
tests/unit/: test_agent.py  test_db.py  test_handbook_search.py  test_mongo_query.py  test_sql_query.py
