[project]
name = "agent-builder-class5-hw2-jaikishen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "supabase>=2.30.0",
]
