[project]
name = "agent-builder-class5-hw2-jaikishen"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "pymongo>=4.17.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "supabase>=2.30.0",
    "uvicorn[standard]>=0.47.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
